# dvp3850-series-copier

./: .gitignore  pyproject.toml
dvp3850_shows_copier/: cache.py  config.py  dvp3850-shows-copier  main.py
tests/: conftest.py  test_cache.py  test_config.py
tests/data/: cache.json  config.ini
