[tool.poetry]
name = "dvp3850_series_copier"
version = "0.1.0"
description = "Tool for determining and copying compatible video files for my Philips DVP3850 player"
authors = ["Bart Kleijngeld <bartkl@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
